# TCBee

./: Makefile  README.md  tcbee
.github/workflows/: tcbee.yml
db/: .gitignore  Cargo.toml  README.md
db/src/: db_writer.rs  flow_tracker.rs  main.rs  reader.rs
db/src/bindings/: sock.rs  tcp_packet.rs  tcp_probe.rs
imgs/src/: architecture.drawio
tcbee/: .gitignore  debu_run.sh  run.sh
tcbee-process/: .gitignore  Cargo.toml  run.sh
tcbee-process/src/: db_writer.rs  flow_tracker.rs  main.rs  reader.rs
tcbee-process/src/bindings/: cwnd.rs  sock.rs  tcp_packet.rs  tcp_probe.rs
tcbee-record/: Cargo.toml  README.md  debu_run.sh  run.sh
tcbee-record/tcbee/: Cargo.toml  build.rs
tcbee-record/tcbee-common/src/bindings/: eth_header.rs  flow.rs  ip6_header.rs  mod.rs  tcp_header.rs  tcp_probe.rs  tcp_retransmit_synack.rs  tcp_sock.rs
tcbee-record/tcbee-ebpf/: Cargo.toml
tcbee-record/tcbee-ebpf/src/: config.rs  counters.rs  main.rs
tcbee-record/tcbee-ebpf/src/probes/: tcp_bad_csum.rs  tcp_probe.rs  tcp_retransmit_synack.rs  tcp_socket.rs  xdp.rs
tcbee-record/tcbee/src/: config.rs  main.rs
tcbee-record/tcbee/src/eBPF/: ebpf_runner.rs  ebpf_runner_config.rs  mod.rs
tcbee-record/tcbee/src/eBPF/probes/: cwnd.rs  headers.rs  kernel.rs  mod.rs  tracepoints.rs
tcbee-record/tcbee/src/handlers/: cwnd.rs  mod.rs  socks.rs  xdp_handler.rs
tcbee-record/tcbee/src/handlers/tracepoints/: tcp_bad_csum.rs  tcp_retransmit_synack.rs  tcpprobe.rs
tcbee-record/tcbee/src/util/: ebpf_runner.rs  errors.rs
tcbee-record/tcbee/src/viz/: ebpf_watcher.rs  file_tracker.rs  flow_tracker.rs  mod.rs  moving_average.rs  rate_watcher.rs
tcbee-record/tcbee/src/viz/components/: graph.rs  mod.rs  status.rs
tcbee-viz/: .gitignore  Cargo.toml
tcbee-viz/src/: main.rs
tcbee-viz/src/modules/backend/: app_settings.rs  intermediate_backend.rs  lib_system_io.rs  plot_data_preprocessing.rs
tcbee-viz/src/modules/backend/database_processor/: mod.rs  plugin_upper_window.rs  trait_database_processor.rs
tcbee-viz/src/modules/ui/: mod.rs
tcbee-viz/src/modules/ui/lib_screens/: screen_home.rs  screen_multiple_flow_plotting.rs  screen_single_flow_plotting.rs
tcbee-viz/src/modules/ui/lib_styling/: app_style_settings.rs  lib_app_theme.rs  mod.rs  style.rs
tcbee-viz/src/modules/ui/lib_widgets/: app_widgets.rs  mod.rs
tcbee-viz/src/modules/ui/lib_widgets/lib_graphs/: multiple_charts_flow_series_data.rs  single_chart_processed_plot_data.rs  struct_flow_series_data.rs  struct_processed_plot_data.rs  struct_zoom_bounds.rs
tcbee/tcbee/: Cargo.toml
tcbee/tcbee-common/: Cargo.toml
tcbee/tcbee-common/src/: lib.rs
tcbee/tcbee-common/src/bindings/: ip4_header.rs  mod.rs  sock.rs  tcp_bad_csum.rs  tcp_sock.rs
tcbee/tcbee-ebpf/src/: config.rs  counters.rs  flow_tracker.rs  main.rs
tcbee/tcbee-ebpf/src/probes/: tc.rs  tcp_probe.rs  tcp_socket.rs  xdp.rs
tcbee/tcbee/src/: config.rs  main.rs
tcbee/tcbee/src/handlers/: mod.rs
tcbee/tcbee/src/handlers/tracepoints/: mod.rs
tcbee/tcbee/src/util/: ebpf_runner.rs  ebpf_watcher.rs  mod.rs
tcbee/tcbee/src/viz/: ebpf_watcher.rs  flow_tracker.rs  mod.rs  rate_watcher.rs
ts-storage/: .gitignore  Cargo.toml  README.md  db.sqlite  deny.toml
ts-storage/doc/: ERM.drawio  README.md
ts-storage/src/: lib.rs
ts-storage/src/duckdb/: cursor.rs  db.rs  mod.rs  queries.rs
ts-storage/src/error/: mod.rs
ts-storage/src/sqlite/: cursor.rs  db.rs  mod.rs
ts-storage/tests/: duckdb.rs  example.rs  sqlite.rs.rs
viz-tool/: Cargo.toml
viz-tool/src/: main.rs
viz-tool/src/modules/backend/: intermediate_backend.rs  lib_system_io.rs  mod.rs  plot_data_preprocessing.rs  struct_tcp_flow_wrapper.rs
viz-tool/src/modules/backend/database_processor/: mod.rs  processor_dummy.rs
viz-tool/src/modules/ui/lib_screens/: mod.rs  screen_database_modification.rs  screen_home.rs  screen_multiple_flow_plotting.rs  screen_settings.rs  screen_single_flow_plotting.rs  trait_screen.rs
viz-tool/src/modules/ui/lib_styling/: app_style_settings.rs
viz-tool/src/modules/ui/lib_widgets/: app_widgets.rs
viz-tool/src/modules/ui/lib_widgets/lib_graphs/: mod.rs  multiple_charts_flow_series_data.rs  single_chart_processed_plot_data.rs  struct_processed_plot_data.rs  struct_string_series_wrapper.rs  struct_zoom_bounds.rs
