[package]
name = "db_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
ts_storage = { path = "../ts-storage"}
#tcbee-common = { path = "../tcbee/tcbee-common" }
tokio = { version = "1.43.0", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "time", "io-util","fs"] }
tokio-util = "0.7.13"
log = "0.4.22"
#sqlx = {version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1.0.217", features = ["serde_derive"] }
ipmpsc = "0.5.1"
tqdm = "0.7.0"
sqlite = { version = "0.36.1", features = ["bundled"] }
indicatif = "0.17.11"
env_logger = "0.11.6"
aya-ebpf = "0.1.1"

[net]
net.git-fetch-with-cli= true 
