[package]
name = "tcp_visualization_application"
version = "0.1.0"
authors = ["ScatteredDrifter"]
edition = "2021"

[dependencies]
plotters-iced = "0.11"
iced = {version = "0.13.1"}
iced_table = "0.13.0"
plotters="0.3"
iced_aw = { version = "0.11.0", default-features = false, features = ["tab_bar", "tabs"] }
rand = "0.9.0"
rust_ts_storage = { path = "../ts-storage"}
rfd = "0.15.0"

[net]
net.git-fetch-with-cli= true 


