[package]
name = "tcbee-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
tcbee-common = { path = "../tcbee-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
memoffset = "0.9.1"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tcbee"
path = "src/main.rs"
