[package]
name = "tcbee-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya","serde"]

[dependencies]
aya = { workspace = true, optional = true }
aya-ebpf.workspace = true
serde = { version = "1.0.217", features = ["serde_derive"], optional = true }

[lib]
path = "src/lib.rs"
